HelloUltraviolet/Fixtures/RejectedSource/Parallelism/SpawnInvalidPriorityOption/Expected.uv
//! Expected diagnostic metadata for the SpawnInvalidPriorityOption rejected-source specimen.

expectedDiagnostic("E-CON-0130", "diagnostics.20.Spawn")
